<resources>
    <string name="app_name">MedicalMall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="sharpping">商城</string>
    <string name="tiku">题库</string>
    <string name="kecheng">课程</string>
    <string name="luntan">论坛</string>
    <string name="my">我</string>
    <string name="toolbar_title">真题模拟</string>
</resources>
