<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
   android:onClick="onClick1"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usercwq.medicalmall.ui.main.MainActivity">
    <FrameLayout
        android:id="@+id/fl"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/huise"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_tiku"
            style="@style/main_bottom_tab_style"
            android:drawableTop="@drawable/rb1"
            android:text="@string/tiku" />

        <RadioButton
            android:id="@+id/rb_sharpping"
            style="@style/main_bottom_tab_style"
            android:drawableTop="@drawable/rb3"
            android:text="@string/sharpping" />

        <RadioButton
            android:id="@+id/rb_kecheng"
            style="@style/main_bottom_tab_style"
            android:drawableTop="@drawable/rb2"
            android:text="@string/kecheng" />

        <RadioButton
            android:id="@+id/rb_luntan"
            style="@style/main_bottom_tab_style"
            android:drawableTop="@drawable/rb4"
            android:text="@string/luntan" />

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/main_bottom_tab_style"
            android:drawableTop="@drawable/rb5"
            android:text="@string/my" />
    </RadioGroup>


</LinearLayout>
